@@ -28,6 +28,7 @@ Tickets:
 	- Fixed #405: Bug - Custom message for maintenance mode is always overridden
 	- Fixed #408: Defect: warning: master.cf: unused parameter: smtpd_override_options=no_address_mappings
 	- Fixed #413: Defect: dovecot quota config inconsistent
+	- Fixed #415: Defect - mailbox catchall catching everything.. not what it should..
 	- Fixed #421: Defect: Adding email account not IDN compatible
 	- Fixed #423: Malfunction: Ticket-Summary at Reseller-Overview
 	- Fixed #424: BUG: After deleting alias domain the ftp accounts of this domain still exist
